--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ docs/site/
 # committed for packages, but should be committed for applications that require a static
 # environment.
 Manifest.toml
-Recursos/
+materiales/
 .DS_Store
 .ipynb_checkpoints/
 *jvsc*
